# paychecks

./: .gitignore  Dockerfile  docker-compose.yml  manage.py  pyproject.toml  readme.md
fin_work/: asgi.py  settings.py  urls.py  uwsgi.ini  wsgi.py
nginx/: nginx.conf
shopping_information/: apps.py  filters.py  models.py  serializers.py  tests.py  urls.py  views.py
shopping_information/migrations/: 0001_initial.py
